Refactor code following revealing pattern

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		  <h3 class="sub-header">Add new work</h3>
 		  <input class="form-control" type="text" placeholder="Add new work here!" id ="dsc1"><br/>
 		  <input class="form-control" type="text" class="span2" value="" id="dpd1" data-date-format="dd-mm-yyyy"><br/>
-		  <button type="button" class="btn btn-primary" onclick = "addNew()">Add New</button>
+		  <button type="button" class="btn btn-primary" onclick = "todoListModule.newWork('worklist','dsc1','dpd1')">Add New</button>
           <h2 class="sub-header">List of Works</h2>
           <div class="table-responsive">
             <table class="table table-striped" id = "worklist">
